[gd_scene format=3 uid="uid://b46lgfx1p243y"]

[ext_resource type="Script" uid="uid://dn7ikwxxm0otj" path="res://Scripts/Quest/quest_ui.gd" id="1_vg0qh"]
[ext_resource type="PackedScene" uid="uid://coxxcvpe3x2b0" path="res://Scenes/quest_item.tscn" id="2_mv1j6"]
[ext_resource type="FontFile" uid="uid://cxqub0sfewm4v" path="res://addons/font_auto_size_labels/demo/Anta-Regular.ttf" id="3_30nqa"]
[ext_resource type="PackedScene" uid="uid://to0c4eroteek" path="res://Scenes/close_btn.tscn" id="4_30nqa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30nqa"]
bg_color = Color(0.033853274, 0.03385329, 0.033853233, 1)

[sub_resource type="LabelSettings" id="LabelSettings_30nqa"]
font = ExtResource("3_30nqa")
font_size = 38

[node name="QuestUI" type="Control" unique_id=521096160]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vg0qh")
quest_item_scene = ExtResource("2_mv1j6")

[node name="Panel" type="Panel" parent="." unique_id=1911845311]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_30nqa")

[node name="Label" type="Label" parent="Panel" unique_id=1638185822]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 41.0
offset_bottom = 102.0
grow_horizontal = 2
text = "Quests"
label_settings = SubResource("LabelSettings_30nqa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=75332903]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer" unique_id=701209110]
unique_name_in_owner = true
layout_mode = 2

[node name="QuestListVbox" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer" unique_id=715800398]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseBtn" parent="." unique_id=1624883434 instance=ExtResource("4_30nqa")]
layout_mode = 1
